--- a/Template/index.html
+++ b/Template/index.html
@@ -108,13 +108,13 @@
 </head>
 
 <body style="background-color:#f9f9f9;">
-    <div style="background-color:#f9f9f9;">
+    <div style="background-color:#fff;">
         <div style="background:#f9f9f9;background-color:#f9f9f9;Margin:0px auto;max-width:600px;">
             <div align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
                 style="background:#f9f9f9;background-color:#f9f9f9;width:100%;">
             </div>
         </div>
-        <div style="background:#fff;background-color:#fff;Margin:0px auto;max-width:600px;">
+        <div style="background:#fff;background-color:#fff;Margin:0px auto;max-width:900px;">
 
             <div align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
                 style="background:#fff;background-color:#fff;width:100%;">
@@ -139,7 +139,7 @@
                                 </div>
 
                                 <div>
-                                    <div align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                                    <div align="left" style="font-size:0px;padding:10px 55px;word-break:break-word;">
 
                                         <div
                                             style="font-family:'Helvetica Neue',Arial,sans-serif;font-size:16px;line-height:22px;text-align:left;color:#555;">
@@ -151,7 +151,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div style="overflow-x:auto;">
+                                <div style="overflow-x:auto; padding: 0 55px">
                                     <table>
                                         <tr>
                                             <th>Code</th>
@@ -221,7 +221,7 @@
                                                         style="border:none;border-radius:3px;color:#ffffff;cursor:auto;padding:15px 25px;"
                                                         valign="middle"> -->
                                                 <button
-                                                    style="background:#FFA53A;border-color:#ffffff ;color:#ffffff;font-family:'Helvetica Neue',Arial,sans-serif;font-size:15px;font-weight:normal;line-height:120%;Margin:0;text-decoration:none;text-transform:none;">
+                                                    style="background:#FFA53A;border-color:#ffffff ;color:#ffffff;font-family:'Inter',Arial,sans-serif;font-size:20px;font-weight:normal;line-height:120%;margin:0;padding:15px 40px;text-decoration:none;text-transform:none;border-radius:5px;">
                                                     View dashboard
                                                 </button>
                                                 <!-- </td> -->
