--- a/Template/blue.html
+++ b/Template/blue.html
@@ -109,7 +109,7 @@
 </head>
 
 <body style="background-color:#f9f9f9;">
-    <div style="background-color:#f9f9f9;">
+    <div style="background-color:#fff;">
         <div style="background:#f9f9f9;background-color:#f9f9f9;Margin:0px auto;max-width:600px;">
             <div align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
                 style="background:#f9f9f9;background-color:#f9f9f9;width:100%;">
@@ -148,7 +148,7 @@
                                             We send you notifications about the products currently in the Inventory.
                                             You can see it in its entirety in the "View Board" section below.
                                             <hr>
-                                            <h3>Monthly Statistical tables</h3>
+                                            <h3>Monthly Statistical Tables</h3>
                                         </div>
                                     </div>
                                 </div>
