--- a/Template/blue.html
+++ b/Template/blue.html
@@ -132,7 +132,7 @@
                                         style="font-size:0px;padding:10px 25px;word-break:break-word;background-color: #B2D3FF;">
 
                                         <div
-                                            style="font-family:'Helvetica Neue',Arial,sans-serif;font-size:28px;font-weight:bold;line-height:1;text-align:center;color:rgb(0, 0, 0);">
+                                            style="font-family:'Helvetica Neue',Arial,sans-serif;font-size:28px;font-weight:bold;line-height:1;text-align:center;color:rgb(0, 0, 0); padding: 20px 0;">
                                             Restaurant Inventorty Management
                                         </div>
 
